style: aplicando novos estilos de cores e gradient

--- a/index.html
+++ b/index.html
@@ -33,17 +33,23 @@
         <div class="conteudo-lista">
           <div>
             <h3 class="font-titulo-2">Dia</h3>
-            <ul class="font-texto-1 cor-0" id="tarefas-dia"></ul>
+            <ul class="font-texto-1" id="tarefas-dia">
+              <li>Fazer desafios para o Processo Seletivo <button>ok</button> <button>no</button></li>
+              <li>Fazer desafios para o Processo Seletivo <button>ok</button> <button>no</button></li>
+            </ul>
           </div>
           <div>
             <h3 class="font-titulo-2">Noite</h3>
-            <ul class="font-texto-1 cor-4" id="tarefas-noite"></ul>
+            <ul class="font-texto-1" id="tarefas-noite">
+              <li>Fazer desafios para o Processo Seletivo <button>ok</button> <button>no</button></li>
+              <li>Fazer desafios para o Processo Seletivo <button>ok</button> <button>no</button></li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="nova-tarefa">
         <input type="text" id="input-nova-tarefa" placeholder="O que você vai fazer hoje?">
-        <button id="btn-nova-tarefa">
+        <button id="btn-nova-tarefa" title="Clique aqui para adicionar uma nova tarefa.">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2" />
           </svg>
