--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <body>
   <main class="conteudo container">
+    <div class="modal-container">
+      <dialog class="modal">
+        <h2 class="font-titulo-2">Atenção:</h2>
+        <p class="font-texto-1"></p>
+        <button class="font-texto-2" onclick="fecharModal()">Ok</button>
+      </dialog>
+    </div>
     <div class="menu">
       <div class="imagem">
         <img src="./assets/imagem-generica.svg" alt="" width="240">
