--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <h2 class="font-titulo-2">Nome Genérico</h2>
       <p class="font-texto-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-      <ul class="font-texto-2-italic">
+      <ul class="font-texto-2">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
