--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
           <div>
             <h3 class="font-titulo-2">Dia</h3>
             <ul class="font-texto-1" id="tarefas-dia">
+              <p class="tarefas-dia">Não há tarefas ainda.</p>
             </ul>
           </div>
           <div>
             <h3 class="font-titulo-2">Noite</h3>
             <ul class="font-texto-1" id="tarefas-noite">
+              <p class="tarefas-noite">Não há tarefas ainda.</p>
             </ul>
           </div>
         </div>
